@@ -8,6 +8,7 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - Support for encoding/decoding BlazeDS specific messages (Ticket:581)
  - Removed tracebacks from exception messages if debug=False (Ticket:552)
  - Support for google.appengine.ext.db.polymodel.PolyModel (Ticket:633)
  - Support for Django File/ImageField (Ticket:631)
